fixed zoom on header

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000">
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -30,6 +31,7 @@
     <noscript id="deferred-styles">
       <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     </noscript>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUBXD3LEXPdDjzwYgLFU-W5U-KaotcX_0"></script>
 
     <div id="root"></div>
     <!--
